--- a/app/scss/_sq-req.scss
+++ b/app/scss/_sq-req.scss
@@ -23,10 +23,10 @@
     display: inline-block;
     border: 1px solid #E9F0F8;
     box-sizing: border-box;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-    color: #ccc;
+    color: #000;
   }
 
   input[type=submit] {
